# chain-crush

./: .env  .eslintrc.json  .gitignore  .gitpod.yml  README.md  package-lock.json  package.json  vercel.json
.cursor/rules/: 00-main-rule.mdc  01-prd-generator.mdc  02-development-workflow.mdc  03-code-review.mdc  04-debugging-workflow.mdc
Docs/: Bug_tracking.md
contract/: Cargo.toml
public/: index.html  manifest.json
src/: App.js  index.css  index.js  setupProxy.js
src/components/: BlockchainInfo.js  GameBoard.js  GameControls.js  Leaderboard.js  LoadingScreen.js  LoginModal.js  MuteButton.js  ScorePopup.js  TournamentInfo.js  TournamentManagement.js  TournamentManager.js  TournamentModal.js  TournamentTimer.js  UserBar.js
src/constants/: gameConstants.js
src/hooks/: useAudio.js  useAuth.js  useGameLogic.js  useGameTimer.js  useLinera.js  useTournament.js
src/services/: lineraService.js
src/styles/: tournament.css
src/utils/: adminUtils.js  authUtils.js  leaderboardUtils.js  tournamentUtils.js
